# RAGMS

./: .env.example  .gitignore  C-phase.md  DEV_SPEC.md  README.md  pyproject.toml  pytest.ini  query_test.txt  settings.yaml
.codex/skills/auto-dev/: SKILL.md
docs/api/: mcp.md
docs/architecture/: overview.md
docs/dashboards/: usage.md
scripts/: ingest_documents.py  query_cli.py  run_acceptance.py  run_dashboard.py  run_mcp_server.py
src/ragms/: __init__.py
src/ragms/core/: __init__.py
src/ragms/ingestion_pipeline/: __init__.py  bootstrap.py  callbacks.py  file_integrity.py  pipeline.py
src/ragms/libs/: __init__.py
src/ragms/mcp_server/: __init__.py  protocol_handler.py  schemas.py  server.py  tool_registry.py
src/ragms/observability/: __init__.py
src/ragms/runtime/: __init__.py  config.py  container.py  exceptions.py  settings_models.py
src/ragms/shared/: __init__.py
src/ragms/storage/: __init__.py
tests/: conftest.py  test_project_bootstrap.py
tests/e2e/: __init__.py  test_dashboard_navigation_regression.py  test_dashboard_smoke.py  test_evaluation_visible_in_dashboard.py  test_full_chain_acceptance.py  test_mcp_client_simulation.py  test_mcp_stdio_flow.py  test_mcp_tool_contracts.py  test_recall_regression.py
tests/fakes/: __init__.py  fake_embedding.py  fake_evaluator.py  fake_llm.py  fake_reranker.py  fake_vector_store.py  fake_vision_llm.py
tests/fixtures/evaluation/: golden_extra_sample.json
tests/integration/: test_bootstrap_smoke.py  test_dashboard_data_access.py  test_dashboard_evaluation_panel.py  test_dashboard_ingestion_management.py  test_dashboard_ingestion_trace.py  test_dashboard_navigation.py  test_dashboard_query_trace.py  test_dashboard_shell.py  test_dashboard_system_overview.py  test_dashboard_trace_compare.py  test_document_lifecycle_integration.py  test_document_registry_persistence.py  test_evaluation_runner.py  test_evaluation_trace_logging.py  test_factory_wiring.py  test_ingestion_metadata_bootstrap.py  test_ingestion_pipeline.py  test_ingestion_pipeline_storage.py  test_ingestion_trace_logging.py  test_mcp_server.py  test_mcp_server_documents.py  test_mcp_server_evaluation.py  test_mcp_server_ingest.py  test_mcp_server_query.py  test_mcp_server_trace.py  test_metadata_injection_llm.py  test_query_engine.py  test_query_trace_logging.py  test_smart_chunk_builder_llm.py  test_trace_write_and_read.py
tests/real_test/: run_real_ingestion_test.py  run_real_mcp_flow_test.py  run_real_query_test.py
tests/unit/: test_fake_providers.py  test_fakes.py  test_project_bootstrap.py  test_reranker_contract.py  test_vector_store_contract.py
tests/unit/ingestion_pipeline/: test_file_integrity.py  test_pipeline_callbacks.py
tests/unit/runtime/: test_config.py  (+2 more)
(+221 files in other folders)
