[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ragms"
version = "0.1.0"
description = "Spec-driven local RAG MCP server scaffold."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "RagServer Contributors" },
]
dependencies = [
  "pydantic>=2.12,<3",
  "PyYAML>=6,<7",
  "python-dotenv>=1,<2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
