[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ragms"
version = "0.1.0"
description = "Spec-driven local RAG MCP server scaffold."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "RagServer Contributors" },
]
dependencies = [
  "chromadb>=1.5,<2",
  "jieba>=0.42,<0.43",
  "langchain-text-splitters>=1.1,<2",
  "markitdown>=0.1,<0.2",
  "mcp>=1.27,<2",
  "openai>=2.30,<3",
  "pillow>=12,<13",
  "pydantic>=2.12,<3",
  "PyYAML>=6,<7",
  "python-dotenv>=1,<2",
  "rank-bm25>=0.2,<0.3",
  "sentence-transformers>=5.3,<6",
  "tenacity>=9.1,<10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
