[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ragms"
version = "1.0.0"
description = "Local-first RAG server with ingestion, query, MCP, trace, dashboard, and evaluation workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "RagServer Contributors" },
]
license = "MIT"
keywords = ["rag", "mcp", "dashboard", "streamlit", "retrieval", "evaluation"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "chromadb>=1.5,<2",
  "jieba>=0.42,<0.43",
  "langchain-text-splitters>=1.1,<2",
  "markitdown>=0.1,<0.2",
  "mcp>=1.27,<2",
  "openai>=2.30,<3",
  "pillow>=12,<13",
  "pydantic>=2.12,<3",
  "PyYAML>=6,<7",
  "python-dotenv>=1,<2",
  "rank-bm25>=0.2,<0.3",
  "sentence-transformers>=5.3,<6",
  "streamlit>=1.56,<2",
  "pandas>=2.2,<4",
  "plotly>=6.0,<7",
  "tenacity>=9.1,<10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-bdd>=8,<9",
  "pytest-check>=2.5,<3",
  "pytest-cov>=6,<7",
  "pytest-mock>=3.14,<4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
